[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>", "Maximilian Schneider <max@mango.markets>"]
edition = "2021"
name = "solana-bench-mango"
version = "1.10.26"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false

[dependencies]
borsh = "0.9.3"
chrono = "0.4.19"
clap = "2.33.1"
crossbeam-channel = "0.5"
fixed = { version = ">=1.11.0, <1.12.0", features = ["serde"] }
fixed-macro = "^1.1.1"
multiqueue = "^0.3.2"
log = "0.4.14"
rand = ">=0.8.5"
rayon = "1.5.1"
serde = "1.0.136"
serde_derive = "1.0.103"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
mango = { path = "../../mango-v3/program", default-features = false, features = ["no-entrypoint"] }
mango-common = { path = "../../mango-v3/common" }
solana-bench-tps = { path = "../bench-tps" }
solana-clap-utils = { path = "../clap-utils" }
solana-cli-config = { path = "../cli-config" }
solana-client = { path = "../client" }
solana-core = { path = "../core" }
solana-faucet = { path = "../faucet" }
solana-genesis = { path = "../genesis" }
solana-gossip = { path = "../gossip" }
solana-logger = { path = "../logger" }
solana-measure = { path = "../measure" }
solana-metrics = { path = "../metrics" }
solana-net-utils = { path = "../net-utils" }
solana-rpc = { path = "../rpc" }
solana-runtime = { path = "../runtime" }
solana-sdk = { path = "../sdk" }
solana-streamer = { path = "../streamer" }
solana-transaction-status = { path = "../transaction-status" }
solana-version = { path = "../version" }
thiserror = "1.0"
solana-program = ">=1.9.0"
csv = "1.0.0"

[dev-dependencies]
serial_test = "0.6.0"
solana-local-cluster = { path = "../local-cluster" }
solana-test-validator = { path = "../test-validator" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
