[package]
name = "solana-bench-quic-tpu-client"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "4.2.4", features = ["derive", "env"] }
solana-net-utils = { workspace = true }
solana-streamer = { workspace = true }
solana-version = { workspace = true }
tokio = { workspace = true }
solana-logger = { workspace = true }
solana-quic-client = { workspace = true }
solana-client = { workspace = true }
solana-connection-cache = { workspace = true }
solana-sdk = {workspace = true}
futures = "0.3.28"
rand = "0.8.5"
rand_chacha = "0.3.1"
itertools = {workspace = true}
quinn = {workspace = true}
bincode = {workspace = true}
serde_json = {workspace = true}

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
