[package]
name = "solana-bench-quic-tpu-server"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "4.2.4", features = ["derive", "env"] }
solana-sdk = { workspace = true }
solana-net-utils = { workspace = true }
solana-streamer = { workspace = true }
solana-version = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = { workspace = true }
solana-logger = { workspace = true }
futures = "0.3.28"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
